--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,6 @@
-#version: 0.2
-#
-#phases:
+version: 0.2
+
+phases:
 #  install:
 #    runtime-versions:
 #      python: 3.7
@@ -8,17 +8,17 @@
 #      # Install dependencies needed for running tests
 #      - echo Installing dependencies
 #      - pip install -r requirements.txt
-#
-#  build:
-#    commands:
-#      - echo Build started on `date`
-#      - echo Running tests
+
+  build:
+    commands:
+      - echo Build started on `date`
+      - echo Running tests
 #      - python3 djangobackend/manage.py test
-#
-#  post_build:
-#    commands:
-#      - echo Build completed on `date`
-#
-#artifacts:
-#  files:
-#    - '**/*'
+
+  post_build:
+    commands:
+      - echo Build completed on `date`
+
+artifacts:
+  files:
+    - '**/*'
