--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,18 +28,17 @@ name: Deploy to Amazon ECS
 
 on:
   push:
-    branches:
-      - "main"
+    branches: [ "main" ]
 
 env:
-  AWS_REGION: eu-north-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: mattdq           # set this to your Amazon ECR repository name
-  ECS_SERVICE: mattdq                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: mattdq                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: mattdq           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: eu-north-1                                      # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: mattdq                                   # set this to your Amazon ECR repository name
+  ECS_SERVICE: mattdq                                      # set this to your Amazon ECS service name
+  ECS_CLUSTER: mattdq                                      # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: .github/workflows/task-definition.json # set this to the path to your Amazon ECS task definition
+                                                              # file, e.g. .aws/task-definition.json
+  CONTAINER_NAME: mattdq                                   # set this to the name of the container in the
+                                                              # containerDefinitions section of your task definition
 
 permissions:
   contents: read
@@ -77,7 +76,6 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
